syntax = "proto3";

package todolist;

option go_package = "todolistpb";

import "google/protobuf/timestamp.proto";

message Todo {
    int32 id = 1;
    string title = 2;
    string note = 3;
    google.protobuf.Timestamp due_date = 4;
}

message CreateTodoRequest {
    Todo todo = 1;
}

message CreateTodoResponse {
    Todo todo = 1;
}

message ReadTodoRequest {
    int32 todo_id = 1;
}

message ReadTodoResponse {
    Todo todo = 1;
}

message UpdateTodoRequest {
    Todo todo = 1;
}

message UpdateTodoResponse {
    Todo todo = 1;
}

message DeleteTodoRequest {
    int32 todo_id = 1;
}

message DeleteTodoResponse {
    // empty response
}

message ListTodosRequest {
    // empty request
}

message ListTodosResponse {
    Todo todo = 1;
}

service TodoListService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
    rpc ReadTodo(ReadTodoRequest) returns (ReadTodoResponse);  // return NOT_FOUND if not found
    rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);  // return NOT_FOUND if not found
    rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);  // return NOT_FOUND if not found
    rpc ListTodos(ListTodosRequest) returns (stream ListTodosResponse);
}
